--- a/force-app/main/default/lwc/badge/badge.css
+++ b/force-app/main/default/lwc/badge/badge.css
@@ -2,7 +2,7 @@
     background-color: #95CBFC;
     padding: 0.25rem 0.5rem;
     border-radius: 15rem;
-    font-size: 0.75rem;
+    font-size: 0.55rem;
     font-weight: 700;
     line-height: normal;
     color: #080707;
@@ -14,3 +14,9 @@
     -ms-flex-align: center;
     align-items: center;
 }
+:host(.mobile) {
+    font-size: 0.35rem;
+} 
+:host(.desktop) {
+    font-size: 0.55rem;
+} 
