--- a/force-app/main/default/aura/modalLauncher/modalLauncher.cmp
+++ b/force-app/main/default/aura/modalLauncher/modalLauncher.cmp
@@ -1,5 +1,5 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome" access="global">
-
+    <aura:attribute name="actionType" type="String"/>
     <lightning:overlayLibrary aura:id="overlayLib"/>
 
     <lightning:messageChannel type="ISVConsole__c"
