--- a/force-app/main/default/lwc/badge/badge.css
+++ b/force-app/main/default/lwc/badge/badge.css
@@ -1,10 +1,9 @@
 :host {
-    background-color: #95CBFC;
-    padding: 0.25rem 0.5rem;
+    background-color: #FFFFFF;
+    padding: 0.10rem 0.85rem;
     font-weight: 700;
     border-radius: 15rem;
     line-height: normal;
-    color: #080707;
     white-space: nowrap;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -12,12 +11,44 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    border: var(--lwc-borderWidthThin,0.5px) solid var(--lwc-colorBorder,rgb(221, 219, 218));
+    
+}
+a {
+    text-decoration: none !important;
+    color: black;
 }
 :host(.mobile) {
     font-size: 0.35rem;
     border-radius: 10rem;
-} 
+}
+:host(.mobile),
+b {
+    padding-left: 0.2rem;
+}
 :host(.desktop) {
-    font-size: 0.55rem;
+    font-size: 0.45rem;
     border-radius: 15rem;
+}
+:host(.viewlicense) {
+    background-color: #f9f0fc;
+}
+:host(.viewaccount) {
+    background-color: #edfcf0;
 } 
+:host(.viewlead) {
+    background-color: #fcf3ed;
+} 
+:host(.createoppty) {
+    background-color: #f5f5e4;
+} 
+:host(.expiration) {
+    background-color: #f7e9e9;
+} 
+:host(.email) {
+    background-color: #f0efed;
+    color: white !important;
+} 
+:host(.notification) {
+    background-color: #fcf7e8;
+}
