--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.css
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.css
@@ -1,15 +1,14 @@
 article {
     padding: 0%;
     border-radius: var(--lwc-borderRadiusMedium,0.25rem);
-    border: var(--lwc-borderWidthThin,0.5px) solid var(--lwc-colorBorder,rgb(221, 219, 218));
+    background-color: #f5f5f5;
+}
+span {
+    padding-top: 0.2rem;
 }
 :host(.mobile) {
     font-size: 0.6125rem;
-} 
-:host(.mobile),
-li {
-    padding-top:1em;
-} 
+}
 :host(.desktop) {
     font-size: 0.8125rem;
 } 
