--- a/force-app/main/default/aura/modalLauncher/modalLauncher.cmp
+++ b/force-app/main/default/aura/modalLauncher/modalLauncher.cmp
@@ -15,7 +15,7 @@
 </aura:component>
 =======
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome" access="global">
-
+    <aura:attribute name="actionType" type="String"/>
     <lightning:overlayLibrary aura:id="overlayLib"/>
 
     <lightning:messageChannel type="ISVConsole__c"
