first committo labs

--- a/force-app/main/default/aura/ISVConsoleNextBestAction/ISVConsoleNextBestAction.cmp
+++ b/force-app/main/default/aura/ISVConsoleNextBestAction/ISVConsoleNextBestAction.cmp
@@ -1,3 +1,10 @@
+<!--
+  Copyright (c) 2018, salesforce.com, inc.
+  All rights reserved.
+  SPDX-License-Identifier: BSD-3-Clause
+  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+ -->
+
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId" access="global" >
     <aura:attribute name="receivedRecordId" type="String" access="global"/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
