--- a/force-app/main/default/lwc/badge/badge.css
+++ b/force-app/main/default/lwc/badge/badge.css
@@ -1,3 +1,11 @@
+/*
+ * Copyright (c) 2018, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: BSD-3-Clause
+ * For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+ */
+
+
 :host {
     background-color: #FFFFFF;
     padding: 0.10rem 0.85rem;
