--- a/force-app/main/default/lwc/badge/badge.css
+++ b/force-app/main/default/lwc/badge/badge.css
@@ -9,8 +9,8 @@
 :host {
     background-color: #FFFFFF;
     padding: 0.10rem 0.85rem;
-    font-weight: 700;
-    border-radius: 15rem;
+    font-weight: 400;
+    border-radius: 15rem;    
     line-height: normal;
     white-space: nowrap;
     display: -webkit-inline-box;
@@ -18,25 +18,31 @@
     display: inline-flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center;
-    border: var(--lwc-borderWidthThin,0.5px) solid var(--lwc-colorBorder,rgb(221, 219, 218));
-    
+    align-items: left;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgb(4, 181, 245);
+    /*border: var(--lwc-borderWidthThin,0.5px) solid var(--lwc-colorBorder,rgb(4, 181, 245));*/
+    color: rgb(4, 181, 245);
+    text-align: left;
 }
 a {
     text-decoration: none !important;
-    color: black;
+    /*color: rgb(4, 181, 245); */
 }
 :host(.mobile) {
-    font-size: 0.35rem;
-    border-radius: 10rem;
+    min-width: 7rem;
+    max-width: 7rem;
 }
-:host(.mobile),
+/*:host(.mobile),
 b {
     padding-left: 0.2rem;
+}*/
+:host(.desktopSmall) {
+    min-width: 10rem;
 }
-:host(.desktop) {
-    font-size: 0.45rem;
-    border-radius: 15rem;
+:host(.desktopLarge) {
+    min-width: 11rem;
 }
 :host(.viewlicense) {
     background-color: #f9f0fc;
