--- a/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.css
+++ b/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.css
@@ -8,7 +8,14 @@
     height: 30rem;
     max-height: 100%;
     min-height: 30rem;
+    overflow: hidden;
 } 
-li {
+.wrapper {
+    height: 400px;
+    max-height: 300px;
+    overflow-y: scroll;
+    margin-top: 2rem;
+} 
+ li {
     padding-top: 0.01rem;
 }
