fix dependencies for team dev

--- a/force-app/main/default/aura/ISVConsoleNextBestAction/ISVConsoleNextBestAction.cmp
+++ b/force-app/main/default/aura/ISVConsoleNextBestAction/ISVConsoleNextBestAction.cmp
@@ -32,7 +32,7 @@
                 {!v.body}
                 <p><lightning:formattedText value="{!v.recordId}" /></p>
                 <aura:set attribute="else">
-                    <isvconsole:promptcarousel /> <br/>
+                    <c:promptcarousel /> <br/>
                 </aura:set>
             </aura:if>
         </div>
