--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.css
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.css
@@ -23,7 +23,11 @@ span {
 :host(.desktop) {
     font-size: 0.8125rem;
 }
+:host(.desktopSmall) {
+    font-size: 0.7125rem;
+}
 .iconsdiv {
     max-width: 4rem;
-}   
+}
+
 
