--- a/force-app/main/default/lwc/listContainer/listContainer.css
+++ b/force-app/main/default/lwc/listContainer/listContainer.css
@@ -4,11 +4,17 @@
  * SPDX-License-Identifier: BSD-3-Clause
  * For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
- .parent {
+ @import 'c/isvHubStyles';
+ 
+ /*.parent {
     height: 30rem;
     max-height: 100%;
     min-height: 30rem;
-} 
+} */
 li {
     padding-top: 0.01rem;
 }
+.iconsdiv {
+    max-width: 4rem;
+    padding-bottom: 1rem;
+ } 
