--- a/force-app/main/default/lwc/listContainer/listContainer.css
+++ b/force-app/main/default/lwc/listContainer/listContainer.css
@@ -6,11 +6,35 @@
  */
  @import 'c/isvHubStyles';
  
- /*.parent {
-    height: 30rem;
+.mobile {
+    height: 17rem;
     max-height: 100%;
-    min-height: 30rem;
-} */
+    min-height: 17rem;
+    position: relative;
+}
+.desktop {
+    height: 18rem;
+    max-height: 100%;
+    min-height: 18rem;
+    position: relative;
+}
+.desktopSmall {
+    height: 17rem;
+    max-height: 100%;
+    min-height: 17rem;
+    position: relative;
+}
+ .nodata {
+    
+}
+p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+} 
 li {
     padding-top: 0.01rem;
 }
